[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Extensions/Davinci/UI/Davinci.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://src/Extensions/Davinci/UI/ShaderPreview.gd" type="Script" id=3]
[ext_resource path="res://assets/FloatingDocs.png" type="Texture" id=4]

[node name="Davinci" type="ConfirmationDialog"]
visible = true
margin_right = 635.0
margin_bottom = 544.0
rect_min_size = Vector2( 220, 128 )
window_title = "Davinci Custom Shaders"
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 619.0
margin_bottom = 500.0

[node name="Previews" type="TabContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 619.0
margin_bottom = 286.0

[node name="ShaderPreview" type="TextEdit" parent="MarginContainer/VBoxContainer/Previews"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 0, 250 )
text = "// --davinci-ui-ignore: bool_vec
// This shader is from Invert.shader (From Pixelorama)
shader_type canvas_item;
render_mode unshaded;

uniform bool red;
uniform bool blue;
uniform bool green;
uniform bool alpha;
uniform bvec2 bool_vec; //unsupported
uniform sampler2D selection;

// hint_range not supported
uniform int whole_number;

void fragment() {
	// Get color from the sprite texture at the current pixel we are rendering
	vec4 original_color = texture(TEXTURE, UV);
	vec4 selection_color = texture(selection, UV);
	vec4 col = original_color;
    if (red)
        col.r = 1.0 - col.r;
    if (green)
        col.g = 1.0 - col.g;
    if (blue)
        col.b = 1.0 - col.b;
    if (alpha)
        col.a = 1.0 - col.a;

	vec4 output = mix(original_color.rgba, col, selection_color.a);
	COLOR = output;
}
"
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
fold_gutter = true
smooth_scrolling = true
script = ExtResource( 3 )
pixelorama_reserved_color = Color( 0.607843, 0.337255, 0.654902, 1 )
davinci_override_color = Color( 0.34902, 0.823529, 0.309804, 1 )

[node name="ImagePreview" type="TextureRect" parent="MarginContainer/VBoxContainer/Previews"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 0, 250 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Docs" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Previews"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 0, 250 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Previews/Docs"]
margin_right = 611.0
margin_bottom = 14.0
text = "Hey docs are comming soon im sure they will float down eventually."

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Previews/Docs"]
margin_top = 18.0
margin_right = 611.0
margin_bottom = 98.0
texture = ExtResource( 4 )
stretch_mode = 6

[node name="ShaderTools" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 290.0
margin_right = 619.0
margin_bottom = 310.0

[node name="UpdateCode" type="Button" parent="MarginContainer/VBoxContainer/ShaderTools"]
margin_right = 105.0
margin_bottom = 20.0
text = "Update shader"

[node name="AutoUpdateCode" type="CheckBox" parent="MarginContainer/VBoxContainer/ShaderTools"]
visible = false
margin_left = 109.0
margin_right = 263.0
margin_bottom = 24.0
text = "Auto-update shader"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/ShaderTools"]
margin_left = 109.0
margin_right = 523.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Save" type="Button" parent="MarginContainer/VBoxContainer/ShaderTools"]
margin_left = 527.0
margin_right = 568.0
margin_bottom = 20.0
text = "Save"

[node name="Open" type="Button" parent="MarginContainer/VBoxContainer/ShaderTools"]
margin_left = 572.0
margin_right = 619.0
margin_bottom = 20.0
text = "Open"

[node name="Errors" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 314.0
margin_right = 619.0
margin_bottom = 314.0

[node name="NoSelection" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Errors"]
visible = false
margin_right = 619.0
margin_bottom = 16.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Errors/NoSelection"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )

[node name="Label" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Errors/NoSelection"]
margin_left = 20.0
margin_right = 619.0
margin_bottom = 16.0
size_flags_horizontal = 3
bbcode_enabled = true
bbcode_text = "Cannot only affect selection, shader does not have [color=red][b]uniform sampler2D selection;[/b][/color]"
text = "Cannot only affect selection, shader does not have uniform sampler2D selection;"
fit_content_height = true

[node name="NotValidSelectionUniform" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Errors"]
visible = false
margin_right = 619.0
margin_bottom = 16.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Errors/NotValidSelectionUniform"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )

[node name="Label" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Errors/NotValidSelectionUniform"]
margin_left = 20.0
margin_right = 619.0
margin_bottom = 16.0
size_flags_horizontal = 3
bbcode_enabled = true
bbcode_text = "Uniform [color=lime]selection[/color] cannot accept textures (is not type Sampler2D)."
text = "Uniform selection cannot accept textures (is not type Sampler2D)."
fit_content_height = true

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 318.0
margin_right = 619.0
margin_bottom = 472.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ParamsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
margin_right = 619.0
margin_bottom = 154.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Persistant" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 476.0
margin_right = 619.0
margin_bottom = 500.0

[node name="SelectionCheckbox" type="CheckBox" parent="MarginContainer/VBoxContainer/Persistant"]
unique_name_in_owner = true
margin_right = 307.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Only Affect Selection"

[node name="AffectedOptions" type="OptionButton" parent="MarginContainer/VBoxContainer/Persistant"]
unique_name_in_owner = true
margin_left = 311.0
margin_right = 619.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Selected cels"
items = [ "Selected cels", null, false, 0, null, "Current frame", null, false, 1, null, "All frames", null, false, 2, null, "All projects", null, false, 3, null ]
selected = 0

[node name="Dialogs" type="Control" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 627.0
margin_bottom = 508.0
mouse_filter = 2

[node name="OpenShader" type="FileDialog" parent="Dialogs"]
margin_right = 444.0
margin_bottom = 386.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Open Shader file"
mode_overrides_title = false
mode = 0
access = 1
filters = PoolStringArray( "*.shader, *gdshader ; Godot Shader Files", "*.tres, *.res ; Godot Resource Files" )

[node name="SaveShader" type="FileDialog" parent="Dialogs"]
margin_right = 469.0
margin_bottom = 410.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Save Your Shader"
mode_overrides_title = false
access = 1
filters = PoolStringArray( "*.shader, *gdshader ; Godot Shader Files", "*.tres, *.res ; Godot Resource Files" )

[connection signal="pressed" from="MarginContainer/VBoxContainer/ShaderTools/UpdateCode" to="." method="_on_update_code_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ShaderTools/Save" to="." method="_on_save_file_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ShaderTools/Open" to="." method="_on_open_file_pressed"]
[connection signal="file_selected" from="Dialogs/OpenShader" to="." method="_on_open_shader_file_selected"]
[connection signal="file_selected" from="Dialogs/SaveShader" to="." method="_on_save_shader_file_selected"]
